--- a/hybrideFrameworkProject/test-output/emailable-report.html
+++ b/hybrideFrameworkProject/test-output/emailable-report.html
@@ -8,39 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">login test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,284</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">cart test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">3,702</td><td></td><td></td></tr>
-<tr><td><a href="#t2"> search  pagetest</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,750</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">order page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,052</td><td></td><td></td></tr>
-<tr><td><a href="#t4">home page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,286</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t5">about page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,139</td><td></td><td></td></tr>
-<tr><td><a href="#t6">wishlist page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,062</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t7">intex page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,145</td><td></td><td></td></tr>
-<tr><td><a href="#t8">Signup page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,223</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t9">help page test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,575</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">10</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">85,218</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,917</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">login test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.LoginPageTest</td><td><a href="#m0">loginpage</a></td><td rowspan="1">1653245475837</td><td rowspan="1">7994</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">cart test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.CartcheckTest</td><td><a href="#m1">Cartpage</a></td><td rowspan="1">1653245484120</td><td rowspan="1">3511</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4"> search  pagetest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.SearchPageTest</td><td><a href="#m2">searchpage</a></td><td rowspan="1">1653245487833</td><td rowspan="1">4567</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">order page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.OrderPageTest</td><td><a href="#m3">orderpage</a></td><td rowspan="1">1653245496617</td><td rowspan="1">12871</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">home page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.HomePage</td><td><a href="#m4">HomePage</a></td><td rowspan="1">1653245509642</td><td rowspan="1">2739</td></tr></tbody>
-<tbody id="t5"><tr><th colspan="4">about page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.AboutPageTest</td><td><a href="#m5">aboutpage</a></td><td rowspan="1">1653245516933</td><td rowspan="1">3698</td></tr></tbody>
-<tbody id="t6"><tr><th colspan="4">wishlist page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.WishlistTest</td><td><a href="#m6">wishlistpage</a></td><td rowspan="1">1653245525091</td><td rowspan="1">4890</td></tr></tbody>
-<tbody id="t7"><tr><th colspan="4">intex page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.indexPageTest</td><td><a href="#m7">indexpage</a></td><td rowspan="1">1653245534143</td><td rowspan="1">2853</td></tr></tbody>
-<tbody id="t8"><tr><th colspan="4">Signup page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.SignUpPageTest</td><td><a href="#m8">Signuppage</a></td><td rowspan="1">1653245541296</td><td rowspan="1">6922</td></tr></tbody>
-<tbody id="t9"><tr><th colspan="4">help page test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.runner.HelpPageTest</td><td><a href="#m9">helpPage</a></td><td rowspan="1">1653245552523</td><td rowspan="1">4311</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.runner.LoginPageTest</td><td><a href="#m0">test1</a></td><td rowspan="2">1653293666847</td><td rowspan="2">5909</td></tr><tr class="passedeven"><td><a href="#m1">test1</a></td></tr></tbody>
 </table>
-<h2>login test</h2><h3 id="m0">com.runner.LoginPageTest#loginpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>cart test</h2><h3 id="m1">com.runner.CartcheckTest#Cartpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2> search  pagetest</h2><h3 id="m2">com.runner.SearchPageTest#searchpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>order page test</h2><h3 id="m3">com.runner.OrderPageTest#orderpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>home page test</h2><h3 id="m4">com.runner.HomePage#HomePage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>about page test</h2><h3 id="m5">com.runner.AboutPageTest#aboutpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>wishlist page test</h2><h3 id="m6">com.runner.WishlistTest#wishlistpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>intex page test</h2><h3 id="m7">com.runner.indexPageTest#indexpage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Signup page test</h2><h3 id="m8">com.runner.SignUpPageTest#Signuppage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>help page test</h2><h3 id="m9">com.runner.HelpPageTest#helpPage</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.runner.LoginPageTest#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Amitraj071201@gmail.com</td><td>Amit@1234</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.runner.LoginPageTest#test1</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>rohitkumar071201@gmail.com</td><td>rohit@123</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
