--- a/hybrideFrameworkProject/test-output/old/Default suite/methods.html
+++ b/hybrideFrameworkProject/test-output/old/Default suite/methods.html
@@ -1,52 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69e366">  <td>22/05/23 00:20:05</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;HomePage.teardown()[pri:0, instance:com.runner.HomePage@7fc44dec]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="e29181">  <td>22/05/23 00:19:06</td>   <td>-59015</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTest.wishlistpage()[pri:0, instance:com.runner.WishlistTest@4c51bb7]">wishlistpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="fcf7ab">  <td>22/05/23 00:20:05</td>   <td>9</td> <td>&nbsp;</td><td title="&lt;&lt;indexPageTest.teardown()[pri:0, instance:com.runner.indexPageTest@426b6a74]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/05/23 00:20:06</td>   <td>93</td> <td title="&lt;&lt;CartcheckTest.tearDown()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="9cd4d8">  <td>22/05/23 00:19:20</td>   <td>-45620</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SignUpPageTest.Signuppage()[pri:0, instance:com.runner.SignUpPageTest@42a9e5d1]">Signuppage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>22/05/23 00:19:49</td>   <td>-16315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderPageTest.orderpage()[pri:0, instance:com.runner.OrderPageTest@6f603e89]">orderpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="e29181">  <td>22/05/23 00:20:05</td>   <td>8</td> <td>&nbsp;</td><td title="&lt;&lt;WishlistTest.teardown()[pri:0, instance:com.runner.WishlistTest@4c51bb7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="fcf7ab">  <td>22/05/23 00:19:03</td>   <td>-62357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="indexPageTest.indexpage()[pri:0, instance:com.runner.indexPageTest@426b6a74]">indexpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>22/05/23 00:20:05</td>   <td>-450</td> <td>&nbsp;</td><td title="&lt;&lt;AboutPageTest.teardowntest()[pri:0, instance:com.runner.AboutPageTest@878452d]">&lt;&lt;teardowntest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/05/23 00:19:44</td>   <td>-21055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CartcheckTest.Cartpage()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">Cartpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/05/23 00:18:55</td>   <td>-70063</td> <td title="&gt;&gt;CartcheckTest.setup()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="9cd4d8">  <td>22/05/23 00:20:05</td>   <td>7</td> <td>&nbsp;</td><td title="&lt;&lt;SignUpPageTest.teardown()[pri:0, instance:com.runner.SignUpPageTest@42a9e5d1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="d8a07f">  <td>22/05/23 00:19:29</td>   <td>-36851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HelpPageTest.helpPage()[pri:0, instance:com.runner.HelpPageTest@5b080f3a]">helpPage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="d8a07f">  <td>22/05/23 00:20:05</td>   <td>-1</td> <td>&nbsp;</td><td title="&lt;&lt;HelpPageTest.teardown()[pri:0, instance:com.runner.HelpPageTest@5b080f3a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="b0c791">  <td>22/05/23 00:20:05</td>   <td>-23</td> <td>&nbsp;</td><td title="&lt;&lt;CartcheckTest.teardown()[pri:0, instance:com.runner.CartcheckTest@7d3430a7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/05/23 00:19:12</td>   <td>-53081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchPageTest.searchpage()[pri:0, instance:com.runner.SearchPageTest@83298d7]">searchpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>22/05/23 00:18:55</td>   <td>-70225</td> <td title="&gt;&gt;AboutPageTest.setup()[pri:0, instance:com.runner.AboutPageTest@878452d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>22/05/23 00:20:06</td>   <td>92</td> <td title="&lt;&lt;AboutPageTest.tearDown()[pri:0, instance:com.runner.AboutPageTest@878452d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="90ad9c">  <td>22/05/23 00:20:05</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;OrderPageTest.teardown()[pri:0, instance:com.runner.OrderPageTest@6f603e89]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="a7bace">  <td>22/05/23 00:20:05</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;SearchPageTest.teardown()[pri:0, instance:com.runner.SearchPageTest@83298d7]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
-<tr bgcolor="66f1f5">  <td>22/05/23 00:19:34</td>   <td>-30968</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginpage()[pri:0, instance:com.runner.LoginPageTest@665e9289]">loginpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="c1b5b6">  <td>22/05/23 00:18:59</td>   <td>-66805</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AboutPageTest.aboutpage()[pri:0, instance:com.runner.AboutPageTest@878452d]">aboutpage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="69e366">  <td>22/05/23 00:18:55</td>   <td>-70029</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePage.HomePage()[pri:0, instance:com.runner.HomePage@7fc44dec]">HomePage</td> 
-  <td>main@181078353</td>   <td></td> </tr>
-<tr bgcolor="66f1f5">  <td>22/05/23 00:20:05</td>   <td>4</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@665e9289]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/05/23 13:44:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.test1(java.lang.String,java.lang.String)[pri:0, instance:com.runner.LoginPageTest@56cdfb3b]">test1</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/05/23 13:44:38</td>   <td>5330</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:com.runner.LoginPageTest@56cdfb3b]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/05/23 13:44:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.test1(java.lang.String,java.lang.String)[pri:0, instance:com.runner.LoginPageTest@56cdfb3b]">test1</td> 
+  <td>main@155361948</td>   <td></td> </tr>
+<tr bgcolor="aaa7c7">  <td>22/05/23 13:44:23</td>   <td>-9189</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.loginpage()[pri:0, instance:com.runner.LoginPageTest@56cdfb3b]">&gt;&gt;loginpage</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@155361948</td>   <td></td> </tr>
 </table>
